Fix icon alignment in ResetBtn on mobile

--- a/src/components/Controls/ResetBtn/resetBtn.css
+++ b/src/components/Controls/ResetBtn/resetBtn.css
@@ -65,6 +65,10 @@
       bottom: 1rem;
       right: 1rem;
       border-radius: 6px;
+
+      svg {
+        padding-bottom: 1px;
+      }
     }
 
     p {
